--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   "description": "server for tyre management",
   "main": "index.js",
   "scripts": {
-    "test": "npm start"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "vijayguhan",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
