--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,16 +14,40 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy to EC2 via SSH
+        id: deploy-ec2
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
+            set -e
+            echo "Deploy started at $(date)" > deploy-log.txt
             cd /home/ubuntu/Tyres-backend
-            git pull origin main
-            npm install
-            pm2 restart all
+
+            # Fix GIT safe directory issue
+            git config --global --add safe.directory /home/ubuntu/Tyres-backend
+            echo "Git config done" >> deploy-log.txt
+
+            # Pull latest changes
+            git pull origin main >> deploy-log.txt 2>&1
+
+            # Fix permissions
+            sudo chown -R ubuntu:ubuntu /home/ubuntu/Tyres-backend >> deploy-log.txt 2>&1
+
+            # Install dependencies
+            npm install >> deploy-log.txt 2>&1
+
+            # Start or restart PM2 process
+            pm2 describe tyres-backend > /dev/null
+            if [ $? -ne 0 ]; then
+              pm2 start index.js --name tyres-backend >> deploy-log.txt 2>&1
+            else
+              pm2 restart tyres-backend >> deploy-log.txt 2>&1
+            fi
+
+            pm2 save >> deploy-log.txt 2>&1
+            echo "Deployment completed at $(date)" >> deploy-log.txt
 
       - name: Send success email
         if: success()
@@ -33,12 +57,18 @@ jobs:
           server_port: 465
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: "✅ Backend Deploy Success"
+          subject: "✅ EC2 Deploy Successful"
           to: "vijayguhan10@gmail.com"
           from: ${{ secrets.EMAIL_USERNAME }}
-          body: "Deployment to EC2 was successful!"
+          body: |
+            ✅ Deployment to EC2 succeeded!
+            Branch: main
+            Repo: ${{ github.repository }}
+            Commit: ${{ github.sha }}
+            Actor: ${{ github.actor }}
+            Time: ${{ github.event.head_commit.timestamp }}
 
-      - name: Send failure email
+      - name: Send failure email with logs
         if: failure()
         uses: dawidd6/action-send-mail@v3
         with:
@@ -46,7 +76,17 @@ jobs:
           server_port: 465
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: "❌ Backend Deploy Failed"
+          subject: "❌ EC2 Deploy Failed"
           to: "vijayguhan10@gmail.com"
           from: ${{ secrets.EMAIL_USERNAME }}
-          body: "Deployment to EC2 failed. Please check the workflow logs."
+          body: |
+            ❌ Deployment to EC2 failed.
+
+            Repo: ${{ github.repository }}
+            Branch: main
+            Commit: ${{ github.sha }}
+            Actor: ${{ github.actor }}
+            Time: ${{ github.event.head_commit.timestamp }}
+
+            Check the GitHub Actions logs for full error details:
+            ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
