--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.3",
     "openai": "^5.5.0"
   },
   "name": "backend-tyre",
