--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "mongoose": "^8.14.0",
     "morgan": "^1.10.0",
     "nodemailer": "^7.0.3",
-    "openai": "^5.5.0"
+    "openai": "^5.5.0",
+    "qs": "^6.14.0"
   },
   "name": "backend-tyre",
   "version": "1.0.0",
